    available in the last two releases, but was disabled
    by default)

  . Check Syntax now shows the blue boxes from the 
    documentation in the definitions window

  . Change the "Variables" pane of the debugger so that it does not do
    word-wrapping (this avoids some performance problems when very
    large values are rendered there)

------------------------------
       Version 5.3
------------------------------

  . Added the Optimization Coach (see the 'View' menu)

  . Adjusted Check Syntax so that set!'d variables and 
    contract obligations are now in tooltips

  . DrRacket's toolbar buttons now have numbers associated with them
    to control what order they appear in.

  . Ditto for the View menu items; also, cleaned up the View menu

  . The framework's color:text%'s token-sym->style init argument (also
    the same as the color:text%'s start-colorer method's argument of
    the same name) is a function that now might be passed 'white-space.

  . record errors coming from user language implementations via log-debug

------------------------------
       Version 5.2.1
------------------------------

  . The keybindings window is no longer a modal dialog (and its contents
    will change to reflect where the keyboard focus currently is)

  . The initial current-directory for unsaved programs in DrRacket is
    now the user's home directory, instead of whatever the
    current-directory was for the underlying OS process.

  . The current-load-relative-directory is now set to #f initially in
    DrRacket (to better match what Racket does).

  . DrRacket no longer shows a stacktrace for syntax errors in the REPL.

  . The preference that makes a single "(" keystroke insert "()" (and
    similarly for [ { " and |) now only takes effect in Racket mode,
    instead of taking effect in all of the modes, as it used to. This
    change is in service to a bugfix that makes the automatic opening